fix gap bike-types

--- a/source/sass/blocks/type-list.scss
+++ b/source/sass/blocks/type-list.scss
@@ -4,14 +4,10 @@
   margin: 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   flex-wrap: wrap;
   box-sizing: border-box;
-
-  @media (max-width: $tablet-width) {
-    gap: 50px;
-    justify-content: space-evenly;
-  }
+  gap: 50px;
+  justify-content: space-evenly;
 }
 
 .type-list__item {
@@ -60,6 +56,10 @@
         top: auto;
         bottom: 30px;
         left: -38px;
+      }
+
+      @media (max-width: $mobile-width) {
+        left: -25px;
       }
     }
 
@@ -119,6 +119,11 @@
         top: -20px;
         right: -20px;
         border-width: 13px;
+      }
+
+
+      @media (max-width: $mobile-width) {
+        right: -16px;
       }
     }
   }
